Major bug: code behave unpredictably due to random sampling of data into test sample. Other major bug: code crashes sometimes if FeatureScaling is turned on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,11 @@ find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
 # linear regression lib
-include_directories(${PROJECT_SOURCE_DIR}/LinearRegressionLib)
-add_subdirectory(LinearRegressionLib)
+include_directories(${PROJECT_SOURCE_DIR}/LinearRegressor)
+add_subdirectory(LinearRegressor)
 
-set(SOURCE_FILES main.cpp LinearRegressionLib/LinearRegressionModel.cpp LinearRegressionLib/LinearRegressionModel.h)
+set(SOURCE_FILES main.cpp)
 add_executable(LinearRegression ${SOURCE_FILES})
 
-target_link_libraries(LinearRegression ${ROOT_LIBRARIES} dl Minuit)
-target_link_libraries(LinearRegression LinearRegressionLib)
+target_link_libraries(LinearRegression ${ROOT_LIBRARIES} Minuit)
+target_link_libraries(LinearRegression LinearRegressor)
